crates/lowerer/tests/snapshots/upstream_parser_policy__ident4_2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `then`
  ╭▸ test:2:17
  │
2 │ when { if(true) };
  ╰╴                ━ expected `then`
