crates/lowerer/tests/snapshots/upstream_parser_policy__ident4_2_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `then`
  ╭▸ ident4_2:2:17
  │
2 │ when { if(true) };
  ╰╴                ━
