crates/lowerer/tests/snapshots/upstream_parser_policy__ident4_2_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..56
└─Policy 0..56
  ├─PermitKeyword "permit" 0..6
  ├─Whitespace " " 6..7
  ├─OpenParenthesis "(" 7..8
  ├─VariableDefinition 8..17
  │ └─PrincipalKeyword "principal" 8..17
  ├─Comma "," 17..18
  ├─Whitespace " " 18..19
  ├─VariableDefinition 19..25
  │ └─ActionKeyword "action" 19..25
  ├─Comma "," 25..26
  ├─Whitespace " " 26..27
  ├─VariableDefinition 27..35
  │ └─ResourceKeyword "resource" 27..35
  ├─CloseParenthesis ")" 35..36
  ├─Newline "\n" 36..37
  ├─Condition 37..54
  │ ├─WhenKeyword "when" 37..41
  │ ├─Whitespace " " 41..42
  │ ├─OpenBrace "{" 42..43
  │ ├─Whitespace " " 43..44
  │ ├─IfExpression 44..53
  │ │ ├─IfKeyword "if" 44..46
  │ │ └─Parenthesized 46..53
  │ │   ├─OpenParenthesis "(" 46..47
  │ │   ├─Literal 47..51
  │ │   │ └─TrueKeyword "true" 47..51
  │ │   ├─CloseParenthesis ")" 51..52
  │ │   └─Whitespace " " 52..53
  │ └─CloseBrace "}" 53..54
  ├─Semicolon ";" 54..55
  └─Newline "\n" 55..56
