crates/lowerer/tests/snapshots/upstream_parser_policy__invalid_token_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ test:2:8
  │
2 │ when { ~ };
  ╰╴       ━━ unexpected token
