crates/lowerer/tests/snapshots/upstream_parser_policy__invalid_token_1_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ invalid_token_1:2:8
  │
2 │ when { ~ };
  ╰╴       ━
