crates/lowerer/tests/snapshots/upstream_parser_policy__invalid_token_1_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 49)
└─Policy [0, 49)
  ├─PermitKeyword "permit" [0, 6)
  ├─Whitespace " " [6, 7)
  ├─OpenParenthesis "(" [7, 8)
  ├─VariableDefinition [8, 17)
  │ └─PrincipalKeyword "principal" [8, 17)
  ├─Comma "," [17, 18)
  ├─Whitespace " " [18, 19)
  ├─VariableDefinition [19, 25)
  │ └─ActionKeyword "action" [19, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 35)
  │ └─ResourceKeyword "resource" [27, 35)
  ├─CloseParenthesis ")" [35, 36)
  ├─Whitespace "\n" [36, 37)
  ├─Condition [37, 47)
  │ ├─WhenKeyword "when" [37, 41)
  │ ├─Whitespace " " [41, 42)
  │ ├─OpenBrace "{" [42, 43)
  │ ├─Whitespace " " [43, 44)
  │ ├─Error [44, 46)
  │ │ ├─Error "~" [44, 45)
  │ │ └─Whitespace " " [45, 46)
  │ └─CloseBrace "}" [46, 47)
  ├─Semicolon ";" [47, 48)
  └─Whitespace "\n" [48, 49)
