crates/lowerer/tests/snapshots/upstream_parser_policy__invalid_token_2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..52
╰─ policy 0..52
   ├─ permit 0..6
   ├─ whitespace 6..7
   ├─ scope 7..37
   │  ├─ ( 7..8
   │  ├─ variable definition 8..17
   │  │  ╰─ principal 8..17
   │  ├─ , 17..18
   │  ├─ whitespace 18..19
   │  ├─ variable definition 19..25
   │  │  ╰─ action 19..25
   │  ├─ , 25..26
   │  ├─ whitespace 26..27
   │  ├─ variable definition 27..35
   │  │  ╰─ resource 27..35
   │  ├─ ) 35..36
   │  ╰─ whitespace 36..37
   ├─ condition 37..50
   │  ├─ when 37..41
   │  ├─ whitespace 41..42
   │  ├─ { 42..43
   │  ├─ whitespace 43..44
   │  ├─ error 44..49
   │  │  ├─ error 44..48
   │  │  ╰─ whitespace 48..49
   │  ╰─ } 49..50
   ├─ ; 50..51
   ╰─ whitespace 51..52
