crates/lowerer/tests/snapshots/upstream_parser_policy__invalid_token_2_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 52)
└─Policy [0, 52)
  ├─PermitKeyword "permit" [0, 6)
  ├─Whitespace " " [6, 7)
  ├─OpenParenthesis "(" [7, 8)
  ├─VariableDefinition [8, 17)
  │ └─PrincipalKeyword "principal" [8, 17)
  ├─Comma "," [17, 18)
  ├─Whitespace " " [18, 19)
  ├─VariableDefinition [19, 25)
  │ └─ActionKeyword "action" [19, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 35)
  │ └─ResourceKeyword "resource" [27, 35)
  ├─CloseParenthesis ")" [35, 36)
  ├─Whitespace "\n" [36, 37)
  ├─Condition [37, 50)
  │ ├─WhenKeyword "when" [37, 41)
  │ ├─Whitespace " " [41, 42)
  │ ├─OpenBrace "{" [42, 43)
  │ ├─Whitespace " " [43, 44)
  │ ├─Error [44, 49)
  │ │ ├─Unknown "🚀" [44, 48)
  │ │ └─Whitespace " " [48, 49)
  │ └─CloseBrace "}" [49, 50)
  ├─Semicolon ";" [50, 51)
  └─Whitespace "\n" [51, 52)
