crates/lowerer/tests/snapshots/upstream_parser_policy__member4_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: invalid key
  ╭▸ member4:3:6
  │
3 │     {3<-4:"what?","ok then":-5>4}
  ╰╴     ━━━━━━━━━━━━ expected a name or string
